<resources>
    <string name="app_name">CControl</string>
    <string name="action_settings">Год</string>
    <string name="January">Январь</string>
    <string name="February">Февраль</string>
    <string name="March">Март</string>
    <string name="April">Апрель</string>
    <string name="May">Май</string>
    <string name="June">Июнь</string>
    <string name="July">Июль</string>
    <string name="August">Август</string>
    <string name="September">Сентябрь</string>
    <string name="October">Октябрь</string>
    <string name="November">Ноябрь</string>
    <string name="December">Декабрь</string>
    <string name="title_activity_diagram">diagramActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="years">
        <item>1488</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getImega">Сделать снимок</string>

</resources>
