<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/Year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Год: "
        android:textSize="17dp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Year"
        android:layout_marginTop="29dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bJanuary"
                style="@style/MonthButton"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/January" />

            <Button
                android:id="@+id/bFebruary"
                style="@style/MonthButton"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/February" />

            <Button
                android:id="@+id/bMarch"
                style="@style/MonthButton"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/March" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bApril"
                style="@style/MonthButton"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/April" />

            <Button
                android:id="@+id/bMay"
                style="@style/MonthButton"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/May" />

            <Button
                android:id="@+id/bJune"
                style="@style/MonthButton"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/June" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bJuly"
                style="@style/MonthButton"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/July" />

            <Button
                android:id="@+id/bAugust"
                style="@style/MonthButton"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/August" />

            <Button
                android:id="@+id/bSeptember"
                style="@style/MonthButton"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/September" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bOctober"
                style="@style/MonthButton"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/October" />

            <Button
                android:id="@+id/bNovember"
                style="@style/MonthButton"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/November" />

            <Button
                android:id="@+id/bDecember"
                style="@style/MonthButton"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/December" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/sumYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tableLayout"
        android:text="Доходы за год: 0 грн"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/costYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sumYear"
        android:text="Затраты за год: 0 грн"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/Year" />

</RelativeLayout>
